# Backend/swagger-output.json
@@ -218,6 +218,45 @@
           }
         }
       }
+    },
+    "/image-generation": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "prompt": {
+                  "example": "any"
+                },
+                "samples": {
+                  "example": "any"
+                },
+                "height": {
+                  "example": "any"
+                },
+                "width": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
